--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "crypto-browserify": "^3.12.0",
     "ionicons": "^7.2.1",
     "jsonwebtoken": "^9.0.2",
+    "mercadopago": "^2.0.11",
     "ng2-pdf-viewer": "^10.2.2",
     "ngx-star-rating": "^2.1.0",
     "process": "^0.11.10",
