--- a/package.json
+++ b/package.json
@@ -27,7 +27,9 @@
     "@capacitor/core": "5.7.0",
     "@capacitor/haptics": "5.0.7",
     "@capacitor/keyboard": "5.0.8",
+    "@capacitor/push-notifications": "^6.0.3",
     "@capacitor/status-bar": "5.0.7",
+    "@codetrix-studio/capacitor-google-auth": "^3.4.0-rc.4",
     "@ionic/angular": "^7.5.0",
     "buffer": "^6.0.3",
     "crypto-browserify": "^3.12.0",
