--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
     "@angular/router": "^17.0.2",
     "@capacitor/android": "^6.1.0",
     "@capacitor/app": "5.0.7",
-    "@capacitor/core": "5.7.0",
+    "@capacitor/core": "^6.1.0",
     "@capacitor/haptics": "5.0.7",
     "@capacitor/keyboard": "5.0.8",
     "@capacitor/push-notifications": "^6.0.3",
